忽略编译中间结果。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,18 @@ add_subdirectory ("file_format/point_cloud_base_presentation")
 add_subdirectory ("file_format/plyfile")
 add_subdirectory ("orthogonal_linked/orthogonal_linked_list")
 add_subdirectory ("orthogonal_linked/orthogonal_linked_octree")
+find_package(Boost)
+if (Boost_FOUND)
+    message("Boost FOUND " + ${Boost_VERSION})
+    find_package(Boost COMPONENTS unit_test_framework)
+    message(STATUS "Boost_INCLUDE_DIRS = ${Boost_INCLUDE_DIRS}.")
+    message(STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}.")
+    message(STATUS "Boost_LIB_VERSION = ${Boost_LIB_VERSION}.")
+    include_directories(${Boost_INCLUDE_DIRS})
+else()
+    message(WARNING "Boost NOT FOUND!")
+endif()
+# find_package(pybind11 CONFIG REQUIRED)
 
 set(SOURCES OrthogonalLinkedOctree.cpp)
 set(CMAKE_CXX_STANDARD 17)
