--- a/orthogonal_linked/orthogonal_linked_list/test/CMakeLists.txt
+++ b/orthogonal_linked/orthogonal_linked_list/test/CMakeLists.txt
@@ -1,4 +1,3 @@
 set(CMAKE_CXX_STANDARD 17)
-set(Boost_DEBUG ON)
-find_package(Boost REQUIRED)
-target_link_libraries(Test PRIVATE Boost::boost Boost::unit_test_framework)
+add_executable(OrthogonalLinkedOctreeTest Test.cpp)
+target_link_libraries(OrthogonalLinkedOctreeTest PRIVATE Boost::boost Boost::unit_test_framework)
