添加适用于initializer_list的坐标和颜色构造函数。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 # 并包含子项目。
 #
 cmake_minimum_required (VERSION 3.8)
+project ("OrthogonalLinkedOctree" LANGUAGES CXX)
 message(STATUS "The Operation System is ${CMAKE_HOST_SYSTEM_NAME}")
 if (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
     # 工具链和 Python 可执行路径均为默认。请依据您自己的实际情况进行修改。
@@ -19,14 +20,37 @@ if (CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /bigobj")
 endif()
-project ("OrthogonalLinkedOctree" LANGUAGES CXX)
+
+execute_process(COMMAND python3 -c "import torch; print(torch.utils.cmake_prefix_path, end='')" RESULT_VARIABLE TORCH_RV OUTPUT_VARIABLE TORCH_OV)
+if (TORCH_RV EQUAL 0)
+    add_compile_options(-D_TORCH)
+    message(
+            STATUS "MARCO '_TORCH' enabled."
+    )
+    # message(STATUS ${CMAKE_PREFIX_PATH}/Torch/TorchConfig.cmake)
+    include(${TORCH_OV}/Torch/TorchConfig.cmake)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+    include_directories(${TORCH_INSTALL_PREFIX}/include)
+    include_directories(${TORCH_INSTALL_PREFIX}/include/torch/csrc/api/include)
+    # message(STATUS ${TORCH_INSTALL_PREFIX}/include)
+    # message(STATUS ${TORCH_INSTALL_PREFIX}/include/torch/csrc/api/include)
+else()
+    message(
+            STATUS "MARCO '_TORCH' disabled."
+    )
+endif()
+
 aux_source_directory(. DIR_SRCS)
 include_directories("${PROJECT_SOURCE_DIR}/file_format/point_cloud_base_presentation")
 include_directories("${PROJECT_SOURCE_DIR}/file_format/plyfile")
 include_directories("${PROJECT_SOURCE_DIR}/file_format/plyfile_for_python")
 include_directories("${PROJECT_SOURCE_DIR}/orthogonal_linked/orthogonal_linked_list")
 include_directories("${PROJECT_SOURCE_DIR}/orthogonal_linked/orthogonal_linked_octree")
+if (TORCH_RV EQUAL 0)
+include_directories("${PROJECT_SOURCE_DIR}/orthogonal_linked/orthogonal_linked_octree_with_torch")
+endif()
 include_directories("${PROJECT_SOURCE_DIR}/orthogonal_linked/orthogonal_linked_octree_for_python")
+
 # 引用所有测试项目代码仅在 Debug 模式下有效。
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     include_directories("${PROJECT_SOURCE_DIR}/orthogonal_linked/orthogonal_linked_list_test")
@@ -44,11 +68,11 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     # 添加“_DEBUG”宏，以便使某些语句仅在 Debug 模式下生效。
     add_compile_options(-D_DEBUG)
     message(
-            STATUS "MARCO '-DEBUG' enabled."
+            STATUS "MARCO '_DEBUG' enabled."
     )
 else()
     message(
-            STATUS "MARCO '-DEBUG' disabled."
+            STATUS "MARCO '_DEBUG' disabled."
     )
 endif()
 
@@ -58,6 +82,9 @@ add_subdirectory ("file_format/plyfile")
 add_subdirectory ("file_format/plyfile_for_python")
 add_subdirectory ("orthogonal_linked/orthogonal_linked_list")
 add_subdirectory ("orthogonal_linked/orthogonal_linked_octree")
+if (TORCH_RV EQUAL 0)
+add_subdirectory ("orthogonal_linked/orthogonal_linked_octree_with_torch")
+endif()
 add_subdirectory ("orthogonal_linked/orthogonal_linked_octree_for_python")
 find_package(Boost)
 if (Boost_FOUND)
@@ -88,10 +115,17 @@ target_compile_features ("plyfile" PUBLIC cxx_std_17)
 target_compile_features ("plyfile_for_python" PUBLIC cxx_std_17)
 target_compile_features ("orthogonal_linked_list" PUBLIC cxx_std_17)
 target_compile_features ("orthogonal_linked_octree" PUBLIC cxx_std_17)
+if (TORCH_RV EQUAL 0)
+target_compile_features ("orthogonal_linked_octree_with_torch" PUBLIC cxx_std_17)
+endif()
 target_compile_features ("orthogonal_linked_octree_for_python" PUBLIC cxx_std_17)
 
 # 添加链接
 add_executable(OrthogonalLinkedOctree ${SOURCES})
+target_link_libraries(OrthogonalLinkedOctree ${TORCH_LIBRARIES})
+if (TORCH_RV EQUAL 0)
+target_link_libraries(OrthogonalLinkedOctree orthogonal_linked_octree_with_torch)
+endif()
 target_link_libraries(OrthogonalLinkedOctree orthogonal_linked_octree)
 target_link_libraries(OrthogonalLinkedOctree orthogonal_linked_list)
 target_link_libraries(OrthogonalLinkedOctree plyfile)
