--- a/orthogonal_linked/orthogonal_linked_octree_test/CMakeLists.txt
+++ b/orthogonal_linked/orthogonal_linked_octree_test/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_options(-D_DEBUG)
     message(
-            STATUS "MARCO '-DEBUG' enabled."
+            STATUS "MARCO '_DEBUG' enabled."
     )
 else()
     message(
