修改链接关系。

--- a/orthogonal_linked/orthogonal_linked_list_test/CMakeLists.txt
+++ b/orthogonal_linked/orthogonal_linked_list_test/CMakeLists.txt
@@ -10,4 +10,4 @@ else()
 endif()
 set(CMAKE_CXX_STANDARD 17)
 add_executable(OrthogonalLinkedListTest Test.cpp)
-target_link_libraries(OrthogonalLinkedListTest PRIVATE Boost::boost Boost::unit_test_framework)
+target_link_libraries(OrthogonalLinkedListTest PRIVATE Boost::boost Boost::unit_test_framework ${TORCH_LIBRARIES})
