--- a/.gitignore
+++ b/.gitignore
@@ -342,6 +342,7 @@ healthchecksdb
 # cmake
 out/
 cmake-build-debug/
+cmake-build-debug-coverage/
 cmake-build-release/
 cmake-build-relwithdebinfo/
 cmake-build-minsizerel/
