添加AVX2指令支持。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,11 @@ target_compile_features ("plyfile" PUBLIC cxx_std_17)
 target_compile_features ("plyfile_for_python" PUBLIC cxx_std_17)
 target_compile_features ("orthogonal_linked_list" PUBLIC cxx_std_17)
 target_compile_features ("orthogonal_linked_octree" PUBLIC cxx_std_17)
+if(MSVC)
+    target_compile_options("orthogonal_linked_octree" INTERFACE /arch:AVX2)
+else()
+    target_compile_options("orthogonal_linked_octree" INTERFACE -mavx2)
+endif()
 if (TORCH_RV EQUAL 0)
     target_compile_features ("orthogonal_linked_octree_with_torch" PUBLIC cxx_std_17)
 endif()
