--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ target_compile_features ("orthogonal_linked_octree" PUBLIC cxx_std_17)
 if(MSVC)
     target_compile_options("orthogonal_linked_octree" INTERFACE /arch:AVX2)
 else()
-    # target_compile_options("orthogonal_linked_octree" INTERFACE -mavx2)
+    target_compile_options("orthogonal_linked_octree" INTERFACE -mavx512f)
 endif()
 if (TORCH_RV EQUAL 0)
     target_compile_features ("orthogonal_linked_octree_with_torch" PUBLIC cxx_std_17)
