将正交链表八叉树测试的随机改为使用torch。

--- a/orthogonal_linked/orthogonal_linked_octree_test/CMakeLists.txt
+++ b/orthogonal_linked/orthogonal_linked_octree_test/CMakeLists.txt
@@ -11,4 +11,4 @@ endif()
 set(CMAKE_CXX_STANDARD 17)
 include_directories("fixtures")
 add_executable(OrthogonalLinkedOctreeTest Test.cpp)
-target_link_libraries(OrthogonalLinkedOctreeTest PRIVATE Boost::boost Boost::unit_test_framework)
+target_link_libraries(OrthogonalLinkedOctreeTest PRIVATE Boost::boost Boost::unit_test_framework ${TORCH_LIBRARIES})
