观察AVX指令生效情况。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,12 +118,14 @@ if (ENABLE_AVX2)
     else()
         target_compile_options("orthogonal_linked_octree" INTERFACE -mavx2)
     endif()
+    message(STATUS "ENABLE_AVX2: TRUE")
 elseif(ENABLE_AVX512F)
     if(MSVC)
         target_compile_options("orthogonal_linked_octree" INTERFACE /arch:AVX512F)
     else()
         target_compile_options("orthogonal_linked_octree" INTERFACE -mavx512f)
     endif()
+    message(STATUS "ENABLE_AVX512F: TRUE")
 endif()
 if (TORCH_RV EQUAL 0)
     target_compile_features ("orthogonal_linked_octree_with_torch" PUBLIC cxx_std_17)
