ignore cmake-build-* directories.

--- a/.gitignore
+++ b/.gitignore
@@ -346,6 +346,7 @@ cmake-build-debug-coverage/
 cmake-build-release/
 cmake-build-relwithdebinfo/
 cmake-build-minsizerel/
+cmake-build-*/
 
 # python venv
 venv/
