添加pvcnn作为参考。将benchmark分离为单独项目。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# CMakeList.txt: 顶层 CMake 项目文件，在此处执行全局配置
 # 并包含子项目。
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.9)
 project ("OrthogonalLinkedOctree" LANGUAGES CXX)
 message(STATUS "The Operation System is ${CMAKE_HOST_SYSTEM_NAME}")
 if (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
@@ -30,6 +30,7 @@ if (TORCH_RV EQUAL 0)
     message(STATUS "MARCO '_TORCH' enabled.")
     include(${TORCH_OV}/Torch/TorchConfig.cmake)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+    message(STATUS "TORCH_INSTALL_PREFIX: ${TORCH_INSTALL_PREFIX}")
     include_directories(${TORCH_INSTALL_PREFIX}/include)
     include_directories(${TORCH_INSTALL_PREFIX}/include/torch/csrc/api/include)
 else()
@@ -132,36 +133,7 @@ if (TORCH_RV EQUAL 0)
 endif()
 target_compile_features ("orthogonal_linked_octree_for_python" PUBLIC cxx_std_17)
 
-# 添加链接
-add_executable(OrthogonalLinkedOctreeInPly examples/OrthogonalLinkedOctreeInPly.cpp)
-if (TORCH_RV EQUAL 0)
-    target_link_libraries(OrthogonalLinkedOctreeInPly ${TORCH_LIBRARIES})
-    target_link_libraries(OrthogonalLinkedOctreeInPly orthogonal_linked_octree_with_torch)
-endif()
-target_link_libraries(OrthogonalLinkedOctreeInPly orthogonal_linked_octree)
-target_link_libraries(OrthogonalLinkedOctreeInPly orthogonal_linked_list)
-target_link_libraries(OrthogonalLinkedOctreeInPly plyfile)
-target_link_libraries(OrthogonalLinkedOctreeInPly point_cloud_base_presentation)
-
-add_executable(OrthogonalLinkedOctreeWithTorch examples/OrthogonalLinkedOctreeWithTorch.cpp)
-if (TORCH_RV EQUAL 0)
-    target_link_libraries(OrthogonalLinkedOctreeWithTorch ${TORCH_LIBRARIES})
-    target_link_libraries(OrthogonalLinkedOctreeWithTorch orthogonal_linked_octree_with_torch)
-endif()
-target_link_libraries(OrthogonalLinkedOctreeWithTorch orthogonal_linked_octree)
-target_link_libraries(OrthogonalLinkedOctreeWithTorch orthogonal_linked_list)
-target_link_libraries(OrthogonalLinkedOctreeWithTorch plyfile)
-target_link_libraries(OrthogonalLinkedOctreeWithTorch point_cloud_base_presentation)
-
-add_executable(OrthogonalLinkedOctreeBenchmark examples/OrthogonalLinkedOctreeBenchmark.cpp)
-if (TORCH_RV EQUAL 0)
-    target_link_libraries(OrthogonalLinkedOctreeBenchmark ${TORCH_LIBRARIES})
-    target_link_libraries(OrthogonalLinkedOctreeBenchmark orthogonal_linked_octree_with_torch)
-endif()
-target_link_libraries(OrthogonalLinkedOctreeBenchmark orthogonal_linked_octree)
-target_link_libraries(OrthogonalLinkedOctreeBenchmark orthogonal_linked_list)
-target_link_libraries(OrthogonalLinkedOctreeBenchmark plyfile)
-target_link_libraries(OrthogonalLinkedOctreeBenchmark point_cloud_base_presentation)
+add_subdirectory ("examples")
 
 # 所有测试项目仅在 Debug 模式下有效。
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
